--- a/css/layoutQuestion/layout.html
+++ b/css/layoutQuestion/layout.html
@@ -18,7 +18,8 @@
 </head>
 <body>
     <h3>layout question :</h3>
-    <h4>If we have three screens, right, center and left three screens, height is 100px for each one,  left and right screen should have fixed width300px. middle screen will be auto width</h4>
+    <h4>If we have three screens, right, center and left three screens, height is 100px for each one.</h4>
+    <h4>left and right screen should have fixed width300px. middle screen will be auto width</h4>
     <!--float method -->
     <section class="layout float">
         <style media="screen">
